<resources>
    <string name="app_name">AndroidBarberApp</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="address_bullet">\u2022 Address:</string>
    <string name="time_bullet">\u2022 Time:</string>
    <string name="stylelist_bullet">\u2022 Stylelist:</string>
    <string name="bullet">\u2022</string>
</resources>